--- a/mvc/view/Wechat/wx.html
+++ b/mvc/view/Wechat/wx.html
@@ -1,4 +1,24 @@
+ 
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+<script src="/public/jquery-2.1.3.min.js"></script>
+<script src="/Wechat/wx.js"></script>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
+
+<title>Wx</title>
+</head> 
+<body >
 
 
 
-页面
+
+
+</body>
+</html>
+
+
+
+
+
